--- a/hw05/css/style.css
+++ b/hw05/css/style.css
@@ -6,3 +6,11 @@ padding: 3px;
 margin: 1px;
 color: white;
 }
+.chart2 div {
+font: 10px sans_serif;
+background-color: steelblue;
+text-align:right;
+padding: 3px;
+margin: 1px;
+color: white;
+}
