--- a/WHAT/templates/base_off.html
+++ b/WHAT/templates/base_off.html
@@ -32,7 +32,9 @@
 </head>
 
 <body>
-
+    {{time}}
+    {{func}}
+    {{args}}
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
